force-app/main/default/objects/Case/fields/Affected_School_IDs__c.field-meta.xml
<CustomField>
    <fullName>Affected_School_IDs__c</fullName>
    <description>School Account IDs when Scope = Multiple_Schools or District_Wide.</description>
    <label>Affected School IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>