force-app/main/default/objects/Case/fields/Closure_Date_Entries__c.field-meta.xml
<CustomField>
    <fullName>Closure_Date_Entries__c</fullName>
    <description>Serialized JSON list of per-date closure objects from the submission form. Parsed by Create_Closure_Events (Flow 1) to create one Closure_Event per (school x date entry).</description>
    <label>Closure Date Entries</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>