force-app/main/default/objects/Case/fields/Closure_Type__c.field-meta.xml
<CustomField>
    <fullName>Closure_Type__c</fullName>
    <label>Closure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Early Dismissal</fullName>
            </value>
            <value>
                <fullName>Closed – eLearning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>