force-app/main/default/objects/Case/fields/Days_Requested_For_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Days_Requested_For_Waiver__c</fullName>
    <description>Must equal Total_Missed_Days__c minus Days_Already_Made_Up__c at submit time.</description>
    <label>Days Requested For Waiver</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>