force-app/main/default/objects/Case/fields/Reported_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reported_By_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Member Center user. Carries through to each generated Closure_Event.</description>
    <label>Reported By Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closure Submissions</relationshipLabel>
    <relationshipName>ReportedByContact</relationshipName>
    <type>Lookup</type>
</CustomField>