force-app/main/default/objects/Case/fields/Submission_Comments__c.field-meta.xml
<CustomField>
    <fullName>Submission_Comments__c</fullName>
    <description>Optional notes entered once per submission. Copied to Comments__c on each generated Closure_Event.</description>
    <label>Submission Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>