force-app/main/default/objects/Case/fields/Submission_District__c.field-meta.xml
<CustomField>
    <fullName>Submission_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Resolved from Member Center identity by the Python API, not from the request body.</description>
    <label>Submission District</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closure Submissions</relationshipLabel>
    <relationshipName>SubmissionDistrict</relationshipName>
    <type>Lookup</type>
</CustomField>