force-app/main/default/objects/Case/fields/Submission_Scope__c.field-meta.xml
<CustomField>
    <fullName>Submission_Scope__c</fullName>
    <label>Submission Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single_School</fullName>
                <label>Single School</label>
            </value>
            <value>
                <fullName>Multiple_Schools</fullName>
                <label>Multiple Schools</label>
            </value>
            <value>
                <fullName>District_Wide</fullName>
                <label>District Wide</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>