force-app/main/default/objects/Case/fields/Superintendent_Certification__c.field-meta.xml
<CustomField>
    <fullName>Superintendent_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required for Tier 3+. Captured electronically via Member Center.</description>
    <label>Superintendent Certification</label>
    <type>Checkbox</type>
</CustomField>