force-app/main/default/objects/Case/fields/Total_Missed_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Missed_Days__c</fullName>
    <description>Computed from linked events. Hours_Missed__c / standard day length. Drives the Tier formula.</description>
    <label>Total Missed Days</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>