force-app/main/default/objects/Case/fields/Waiver_District__c.field-meta.xml
<CustomField>
    <fullName>Waiver_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The petitioning district.</description>
    <label>Waiver District</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closure Waiver Requests</relationshipLabel>
    <relationshipName>WaiverDistrict</relationshipName>
    <type>Lookup</type>
</CustomField>