force-app/main/default/objects/Case/fields/Waiver_Status__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Status__c</fullName>
    <label>Waiver Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Local_Board_Approved</fullName>
                <label>Local Board Approved</label>
            </value>
            <value>
                <fullName>State_Board_Approved</fullName>
                <label>State Board Approved</label>
            </value>
            <value>
                <fullName>Logged</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>