force-app/main/default/objects/Case/recordTypes/Closure_Submission.recordType-meta.xml
<RecordType>
    <fullName>Closure_Submission</fullName>
    <active>true</active>
    <businessProcess>Closure_Submission_Process</businessProcess>
    <description>Closure submission workflow + audit trail. One Case per submission event; Flow expands it into N Closure_Event__c rows.</description>
    <label>Closure Submission</label>
</RecordType>