force-app/main/default/objects/Case/recordTypes/Closure_Waiver_Request.recordType-meta.xml
<RecordType>
    <fullName>Closure_Waiver_Request</fullName>
    <active>true</active>
    <businessProcess>Closure_Waiver_Process</businessProcess>
    <description>Waiver workflow with statutory tier routing. Long-lived; references closures by Tier via Waiver_Closure_Link__c.</description>
    <label>Closure Waiver Request</label>
</RecordType>